--- a/src/components/MostRecentArticle.astro
+++ b/src/components/MostRecentArticle.astro
@@ -11,6 +11,7 @@ interface Props {
 
 // Article props
 const { article } = Astro.props;
+console.log(" [ ARTICLE ] ", article);
 ---
 
 <div class="relative inline-block w-full sm:w-auto cursor-pointer rounded-2xl">
